add support of JDK 17 (except in CLI)